@@ -268,7 +268,6 @@ selectgroup = Group:
 selecthost = Host:
 selectserv = Service:
 service = service
-showhidecontrols = Show Controls
 i18n_fixedscale = Fixed Scale
 submit = Update Graphs
 zoom = Size:
