@@ -1449,34 +1449,34 @@ sub printcontrols {
                                  ) . "\n") . "\n",
             $cgi->div({-class => 'secondary_controls'},
                       $cgi->p({-class => 'controls_toggle'},
-                              $cgi->checkbox(-name => 'showhidecontrols',
-                                             -onChange => 'toggleControlsDisplay()',
-                                             -label => trans('showhidecontrols'))) . "\n",
-                      $cgi->table({-id => 'secondary_controls_box'},
-                                  $cgi->Tr({-valign => 'top'},
-                                           $cgi->td(q( )),
-                                           $cgi->td($cgi->checkbox(-name => 'fixedscale', -label => trans('i18n_fixedscale'), -checked => $opts->{fixedscale})),
-                                           $cgi->td(q( )),
-                                           ),
-                                  $cgi->Tr({-valign => 'top'},
-                                           $cgi->td({-class => 'control_label'},trans('zoom')),
-                                           $cgi->td($cgi->popup_menu(-name => 'geom', -values => [@geom])),
-                                           $cgi->td(q( )),
-                                           ),
-                                  $cgi->Tr({-valign => 'top'},
-                                           $cgi->td({-class => 'control_label'},trans('periods')),
-                                           $cgi->td($cgi->popup_menu(-name => 'period', -values => [@PERIODS], -size => PERIODLISTROWS, -multiple => 1)),
-                                           $cgi->td($cgi->button(-name => 'clear', -label => trans('clear'), -onClick => 'clearPeriodSelection()')),
-                                           ),
-                                  ($context eq 'both' || $context eq 'service')
-                                  ? $cgi->span({-id => 'db_controls'},
-                                               $cgi->Tr({-valign => 'top'},
-                                                        $cgi->td({-class => 'control_label'},trans('selectds')),
-                                                        $cgi->td($cgi->popup_menu(-name => 'db', -values => [], -size => DBLISTROWS, -multiple => 1)),
-                                                        $cgi->td($cgi->button(-name => 'clear', -label => trans('clear'), -onClick => 'clearDBSelection()')),
-                                                        ))
-                                  : q(),
-                                  ) . "\n",
+                              $cgi->button(-name => 'showhidecontrols',
+                                           -onClick => 'toggleControlsDisplay(this)',
+                                           -label => q(-))) . "\n",
+                      $cgi->div({-id => 'secondary_controls_box'},
+                                $cgi->table($cgi->Tr({-valign => 'top'},
+                                                     $cgi->td(q( )),
+                                                     $cgi->td($cgi->checkbox(-name => 'fixedscale', -label => trans('i18n_fixedscale'), -checked => $opts->{fixedscale})),
+                                                     $cgi->td(q( )),
+                                                     ),
+                                            $cgi->Tr({-valign => 'top'},
+                                                     $cgi->td({-class => 'control_label'},trans('zoom')),
+                                                     $cgi->td($cgi->popup_menu(-name => 'geom', -values => [@geom])),
+                                                     $cgi->td(q( )),
+                                                     ),
+                                            $cgi->Tr({-valign => 'top'},
+                                                     $cgi->td({-class => 'control_label'},trans('periods')),
+                                                     $cgi->td($cgi->popup_menu(-name => 'period', -values => [@PERIODS], -size => PERIODLISTROWS, -multiple => 1)),
+                                                     $cgi->td($cgi->button(-name => 'clear', -label => trans('clear'), -onClick => 'clearPeriodSelection()')),
+                                                     ),
+                                            ($context eq 'both' || $context eq 'service')
+                                            ? $cgi->span({-id => 'db_controls'},
+                                                         $cgi->Tr({-valign => 'top'},
+                                                                  $cgi->td({-class => 'control_label'},trans('selectds')),
+                                                                  $cgi->td($cgi->popup_menu(-name => 'db', -values => [], -size => DBLISTROWS, -multiple => 1)),
+                                                                  $cgi->td($cgi->button(-name => 'clear', -label => trans('clear'), -onClick => 'clearDBSelection()')),
+                                                                  ))
+                                            : q(),
+                                            )) . "\n",
                       ) . "\n",
             $cgi->end_form . "\n");
 }
@@ -2062,7 +2062,6 @@ sub processdata {
     selecthost => 'Host: ',
     selectserv => 'Service: ',
     service => 'service',
-    showhidecontrols => 'Show Controls',
     i18n_fixedscale => 'Fixed Scale',
     submit => 'Update Graphs',
     testcolor => 'Show Colors',
