@@ -2,6 +2,7 @@ $Id$
 
 TBD
 
+* added sans-serif to css to keep unix clients happy
 * fixed alignment of graph labels
 * eliminate vestigial 'graph' CGI option.
 * labels for services and data sets are now implemented throughout all cgi
